--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
 <body>
 
-hello robin
+ <audio controls>
+ <source src="music.mp3"
+         type='audio/mp3'>
+ <!-- The next two lines are only executed if the browser doesn't support MP4 files -->
+ <source src="music.oga"
+         type='audio/ogg; codecs=vorbis'>
+ <!-- The next line will only be executed if the browser doesn't support the <audio> tag-->
+ <p>Your user agent does not support the HTML5 Audio element.</p>
+</audio>
+
+<a href="music.mp3">download</a>
+
 </body>
 </html>
