--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 <body>
 
  <audio controls>
- <source src="music.mp3"
-         type='audio/mp3'>
+ <source src="http://media.w3.org/2010/07/bunny/04-Death_Becomes_Fur.mp4"
+         type='audio/mp4'>
  <!-- The next two lines are only executed if the browser doesn't support MP4 files -->
- <source src="music.oga"
+ <source src="http://media.w3.org/2010/07/bunny/04-Death_Becomes_Fur.oga"
          type='audio/ogg; codecs=vorbis'>
  <!-- The next line will only be executed if the browser doesn't support the <audio> tag-->
  <p>Your user agent does not support the HTML5 Audio element.</p>
 </audio>
-
-<a href="music.mp3">download</a>
-
 </body>
 </html>
